--- a/xssfinder-annotations/pom.xml
+++ b/xssfinder-annotations/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>xssfinder</groupId>
+    <groupId>org.xssfinder</groupId>
     <artifactId>xssfinder-annotations</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
-        <groupId>xssfinder</groupId>
+        <groupId>org.xssfinder</groupId>
         <artifactId>xssfinder</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
