--- a/xssfinder-test/pom.xml
+++ b/xssfinder-test/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <artifactId>xssfinder</artifactId>
-        <groupId>xssfinder</groupId>
+        <groupId>org.xssfinder</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
