--- a/xssfinder-test/pom.xml
+++ b/xssfinder-test/pom.xml
@@ -43,7 +43,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>xssfinder</groupId>
+            <groupId>org.xssfinder</groupId>
             <artifactId>xssfinder-core</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
