First steps in pulling out Thrift remote:  - Add Thrift definition & generated classes  - Move page finding to remote

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@
 target/*
 xssfinder-annotations/target/*
 xssfinder-core/target/*
+xssfinder-remote/target/*
+xssfinder-remote-java/target/*
 xssfinder-test/target/*
