--- a/xssfinder-executor/pom.xml
+++ b/xssfinder-executor/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>xssfinder-remote</artifactId>
+    <artifactId>xssfinder-executor</artifactId>
 
 
     <dependencies>
