WIP Thrift refactoring:  - Replace Class<?> with PageDefinition and Method with MethodDefinition  - Move simple running commands into Thrift interface  - Get (most of) Core unit tests passing again

--- a/xssfinder-core/pom.xml
+++ b/xssfinder-core/pom.xml
@@ -15,20 +15,31 @@
     </parent>
 
     <dependencies>
+        <!-- Once refactoring is complete, core should not depend on annotation -->
         <dependency>
             <groupId>org.xssfinder</groupId>
             <artifactId>xssfinder-annotations</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.xssfinder</groupId>
+            <artifactId>xssfinder-executor</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.reflections</groupId>
-            <artifactId>reflections-maven</artifactId>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -57,6 +68,11 @@
         <dependency>
             <groupId>xml-apis</groupId>
             <artifactId>xml-apis</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
