--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
                 <artifactId>logback-classic</artifactId>
                 <version>1.0.13</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>14.0</version>
+            </dependency>
 
             <dependency>
                 <groupId>junit</groupId>
