--- a/xssfinder-executor-java/pom.xml
+++ b/xssfinder-executor-java/pom.xml
@@ -27,6 +27,11 @@
             <groupId>org.apache.thrift</groupId>
             <artifactId>libthrift</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections-maven</artifactId>
