--- a/xssfinder-test/pom.xml
+++ b/xssfinder-test/pom.xml
@@ -17,6 +17,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.xssfinder</groupId>
+            <artifactId>xssfinder-executor-java</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>3.1.0.RELEASE</version>
