WIP Thrift refactoring:  - Fix dependency conflict

--- a/xssfinder-core/pom.xml
+++ b/xssfinder-core/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>selenium-java</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
