--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,15 @@
                 <version>1.4.01</version>
                 <scope>test</scope>
             </dependency>
+
+            <!-- The following dependency is set just to ensure all the transitive dependencies use this version, to
+                 avoid no class def issues -->
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpcore</artifactId>
+                <version>4.2.2</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
