--- a/xssfinder-test/pom.xml
+++ b/xssfinder-test/pom.xml
@@ -53,6 +53,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <!-- JETTY DEPENDENCIES -->
         <dependency>
