--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
                 <groupId>xml-apis</groupId>
                 <artifactId>xml-apis</artifactId>
                 <version>1.4.01</version>
-                <scope>test</scope>
+                <scope>runtime</scope>
             </dependency>
 
             <!-- The following dependency is set just to ensure all the transitive dependencies use this version, to
