--- a/xssfinder-java-annotations/pom.xml
+++ b/xssfinder-java-annotations/pom.xml
@@ -2,21 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>xssfinder</artifactId>
-        <groupId>org.xssfinder</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>xssfinder-executor</artifactId>
+    <artifactId>xssfinder-java-annotations</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.thrift</groupId>
-            <artifactId>libthrift</artifactId>
-        </dependency>
-    </dependencies>
+    <parent>
+        <groupId>org.xssfinder</groupId>
+        <artifactId>xssfinder</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
 </project>
