--- a/xssfinder-java-executor/pom.xml
+++ b/xssfinder-java-executor/pom.xml
@@ -9,17 +9,17 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>xssfinder-executor-java</artifactId>
+    <artifactId>xssfinder-java-executor</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.xssfinder</groupId>
-            <artifactId>xssfinder-executor</artifactId>
+            <artifactId>xssfinder-java-thrift</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.xssfinder</groupId>
-            <artifactId>xssfinder-annotations</artifactId>
+            <artifactId>xssfinder-java-annotations</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
