--- a/xssfinder-test/pom.xml
+++ b/xssfinder-test/pom.xml
@@ -18,7 +18,7 @@
     <dependencies>
         <dependency>
             <groupId>org.xssfinder</groupId>
-            <artifactId>xssfinder-executor-java</artifactId>
+            <artifactId>xssfinder-java-executor</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
