--- a/xssfinder-php-executor/composer.json
+++ b/xssfinder-php-executor/composer.json
@@ -8,6 +8,10 @@
         }
     ],
 
+    "autoload": {
+        "psr-0": {"XssFinder\\": "src"}
+    },
+
     "require": {
         "leric/php-thrift": "0.9.0"
     }
