--- a/xssfinder-php-executor/composer.json
+++ b/xssfinder-php-executor/composer.json
@@ -21,7 +21,8 @@
 
     "require": {
         "leric/php-thrift": "0.9.0",
-        "mindplay/annotations": "dev-master"
+        "mindplay/annotations": "dev-master",
+        "facebook/webdriver": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*@dev",
