Add (awful) integration test for PHP implementation of startRoute

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ xssfinder-java-annotations/target/*
 xssfinder-java-executor/target/*
 xssfinder-test/target/*
 xssfinder-php-executor/vendor/*
+xssfinder-php-executor/test/*.log
