Add Thrift-generated code to Composer autoload classmap

--- a/xssfinder-php-executor/composer.json
+++ b/xssfinder-php-executor/composer.json
@@ -16,7 +16,8 @@
     ],
 
     "autoload": {
-        "psr-0": {"XssFinder\\": "src"}
+        "psr-0": {"XssFinder\\": "src"},
+        "classmap": ["src/XssFinder/Executor.php", "src/XssFinder/Types.php"]
     },
 
     "require": {
