--- a/xssfinder-core/pom.xml
+++ b/xssfinder-core/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>org.xssfinder</groupId>
-            <artifactId>xssfinder-java-executor</artifactId>
+            <artifactId>xssfinder-java-thrift</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
