--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,6 @@ xssfinder-java-annotations/target/*
 xssfinder-java-executor/target/*
 xssfinder-testwebapp/target/*
 xssfinder-java-test/target/*
+xssfinder-php-executor/target/*
 xssfinder-php-executor/vendor/*
 xssfinder-php-executor/test/*.log
