--- a/xssfinder-php-executor/pom.xml
+++ b/xssfinder-php-executor/pom.xml
@@ -9,77 +9,17 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>xssfinder-java-executor</artifactId>
+    <artifactId>xssfinder-php-executor</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>org.xssfinder</groupId>
-            <artifactId>xssfinder-java-thrift</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.xssfinder</groupId>
-            <artifactId>xssfinder-java-annotations</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.thrift</groupId>
-            <artifactId>libthrift</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.reflections</groupId>
-            <artifactId>reflections-maven</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>3.1.0.RELEASE</version>
-        </dependency>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.github.tomakehurst</groupId>
-            <artifactId>wiremock</artifactId>
-            <scope>test</scope>
-            <!-- Include this if you have dependency conflicts for Guava, Jetty, Jackson or Apache HTTP Client -->
-            <classifier>standalone</classifier>
-        </dependency>
-        <!-- The following dependency is required by wiremock, to satisfy a reference to
-             org.w3c.dom.ElementTraversal
-             Also note that version 2 doesn't satisfy this dependency -->
-        <dependency>
-            <groupId>xml-apis</groupId>
-            <artifactId>xml-apis</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -110,6 +50,9 @@
     </dependencies>
 
     <build>
+
+        <testSourceDirectory>test/java</testSourceDirectory>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -142,6 +85,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.14.1</version>
+                <configuration>
+                    <basedir>${project.basedir}/test/java</basedir>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
